# fsst-like

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEV.md  Makefile  Memory.hpp  README.md  algorithm.ipynb  main.cc  main.cpp  sketch.cc
scripts/: data-setup.sh  fsst-setup.sh
src/: BenchmarkDriver.cpp  BenchmarkDriver.hpp  FsstWrapper.cpp  FsstWrapper.hpp  MetaStateMachine.cpp  MetaStateMachine.hpp  SimdEverywhere.hpp  StateMachine.cpp  StateMachine.hpp  Utility.cpp  Utility.hpp
src/algos/: Comet.hpp  Memmem.hpp  Skipping.hpp  StartsWith.hpp  StdFind.hpp
